# FastApiCRUD

./: main.py  pyproject.toml  sqliteSYNC.db
api_v1/users/: crud.py  depends.py  schemas.py  views.py
api_v2/products/: crud.py  schemas.py  views.py
core/async_database/: database.py  depends.py  product.py
core/sync_database/: __init__.py  base.py  email.py  user.py
