[tool.poetry]
name = "sync_crud"
version = "0.1.0"
description = "sync_crud"
authors = ["Artem Muzychuk <muzychukartem.music@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = {extras = ["standart"], version = "^0.30.1"}
sqlalchemy = "^2.0.30"
aiosqlite = "^0.20.0"
pydantic = "^2.7.3"
pydantic-settings = "^2.3.1"
greenlet = "^3.0.3"
alembic = "^1.13.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
